# prysm

./: .ethspecify.yml  go.mod
.github/workflows/: clang-format.yml
api/fallback/: fallback.go
beacon-chain/blockchain/: BUILD.bazel  chain_info.go  chain_info_forkchoice.go  chain_info_test.go  execution_engine.go  execution_engine_test.go  forkchoice_update_execution.go  forkchoice_update_execution_test.go  gloas.go  gloas_test.go  head.go  log_helpers.go  metrics.go  process_attestation.go  process_attestation_test.go  process_block.go  process_block_helpers.go  process_block_helpers_test.go  receive_attestation.go  receive_block.go  receive_execution_payload_envelope.go  receive_payload_attestation_message.go  service.go
beacon-chain/cache/: BUILD.bazel  committee.go  committee_disabled.go  committee_test.go  proposer_preferences.go  proposer_preferences_test.go
beacon-chain/execution/: BUILD.bazel  engine_client.go  engine_client_test.go
beacon-chain/forkchoice/: interfaces.go
beacon-chain/node/: BUILD.bazel  node.go  shutdown_proposals.go  shutdown_proposals_test.go
beacon-chain/p2p/: gossip_scoring_params.go  gossip_topic_mappings.go  gossip_topic_mappings_test.go  topics.go  topics_test.go
beacon-chain/rpc/: BUILD.bazel  endpoints.go  endpoints_test.go  service.go
beacon-chain/state/: BUILD.bazel  interfaces.go  interfaces_gloas.go
beacon-chain/sync/: BUILD.bazel  batch_verifier.go  batch_verifier_test.go  data_column_sidecars.go  data_column_sidecars_test.go  fork_watcher.go  metrics.go  options.go  pending_payload_envelope_test.go  rpc_beacon_blocks_by_range.go  rpc_beacon_blocks_by_range_test.go  rpc_send_request.go  rpc_status_test.go  service.go  service_test.go  subscriber.go  validate_beacon_attestation.go  validate_beacon_blocks.go  validate_data_column.go  validate_data_column_gloas.go  validate_data_column_gloas_test.go  validate_execution_payload_envelope.go  validate_execution_payload_envelope_test.go  validate_signed_proposer_preferences.go  validate_signed_proposer_preferences_test.go
beacon-chain/verification/: BUILD.bazel  execution_payload_envelope.go  execution_payload_envelope_test.go  initializer.go  interface.go  payload_attestation.go  requirements.go  result.go  signed_proposer_preferences.go  signed_proposer_preferences_test.go
changelog/: bastin_cache-miss-bug.md  bastin_fix-logging-level-bug.md  bastin_get-version-v2.md  bastin_per-package-verbosity.md  bastin_remove-committee-index-param.md  bastin_update-go-ssz-faster.md  enalepa_postpone-shutdown-for-proposals.md  fernantho_connect-merkle-proofs-with-endpoint.md  fernantho_refactor_proofCollector_parallel_operation.md  fernantho_ssz-ql-use-fastssz-generated-functions.md  fix-gloas-metadata-v2.md  james-prysm_improve-fallback-logs.md  james-prysm_proposer-preferences-array.md  james-prysm_ptc-next-duties-grpc.md  james-prysm_validator-ptc.md  james-prysm_validator-rest-ptc.md  manu-field-trie-copy-on-write.md  manu_async_committee_cache.md  manu_disable_get_blobs_v2_hidden.md  manu_fcu_args_skip_attributes_non_regular_sync.md  potuz-gloas-better-logs.md  potuz_gloas_receive_block.md  potuz_gloas_receive_payload.md  potuz_gloas_update_head.md  potuz_ignore_bad_data.md  potuz_preprocess_block_before_processing.md  potuz_ptc_message.md  potuz_replay_post_gloas.md  potuz_submit_bid.md  potuz_use_right_digest.md  potuz_validate_on_lookahead.md  pvl-fix-16223.md  pvl-go-rm-copy.md  sahil-4555-pr-15763.md  satushh-close-file.md  satushh-close-host.md  syjn99_clang-format-ci-fix.md  syjn99_docs-ssz-ql.md  syjn99_e2e-resource-leaks.md  syjn99_feat-execution-payload-gossip-event.md  (+32 more)
cmd/: BUILD.bazel  completion.go  completion_scripts.go  completion_test.go  flags.go  flags_test.go  helpers.go
consensus-types/: BUILD.bazel  indexed_payload_attestation.go
encoding/ssz/query/proof/: BUILD.bazel  encode.go  hash.go  hash_tree_root.go  hash_tree_root_test.go  hasher.go  interface.go  proof.go  tree.go  treeroot.go  wrapper.go
encoding/ssz/query/testutil/: BUILD.bazel  runner.go  util.go
hack/: update-go-ssz.sh
math/: math_helper.go  math_helper_test.go
specrefs/: configs.yml  functions.yml
ssz-query/: BUILD.bazel  merkle_proofs_test.go  path.go  path_test.go  query.go  query_test.go  ssz_info.go
testing/spectest/shared/gloas/sanity/: BUILD.bazel  slot_processing.go
(+224 files in other folders)
