load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "path.go",
        "query.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/ssz-query",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["query_test.go"],
    deps = [
        "//config/params:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
    ],
)
