load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "path.go",
        "query.go",
        "ssz_info.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/ssz-query",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prysmaticlabs_fastssz//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "path_test.go",
        "query_test.go",
    ],
    deps = [
        ":go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
    ],
)
