load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "encode.go",
        "hash.go",
        "hasher.go",
        "interface.go",
        "proof.go",
        "tree.go",
        "wrapper.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/encoding/ssz/query/proof",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_emicklei_dot//:go_default_library",
        "@com_github_minio_sha256_simd//:go_default_library",
    ],
)
