load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["slot_processing.go"],
    importpath = "github.com/OffchainLabs/prysm/v7/testing/spectest/shared/gloas/sanity",
    visibility = ["//testing/spectest:__subpackages__"],
    deps = [
        "//beacon-chain/core/transition:go_default_library",
        "//beacon-chain/state/state-native:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/require:go_default_library",
        "//testing/spectest/utils:go_default_library",
        "//testing/util:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
